# compost_tracker

./: .gitignore  Dockerfile  manage.py  pyproject.toml  readme.md  secrets.ini  wip.sh
compost_tracker/: asgi.py  run_server.txt  settings.py  urls.py  wsgi.py
pile_tracker/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
pile_tracker/migrations/: 0001_initial.py  0002_log_notes.py  0003_auto_20210323_2011.py  0004_auto_20210323_2013.py  0005_auto_20210323_2219.py  0006_auto_20210328_0829.py  0007_auto_20210716_1918.py  0008_auto_20210804_1958.py
pile_tracker/templates/: base_generic.html  index.html  pile_detail.html
pile_tracker/templates/pile_tracker/: location_list.html  pile_list.html
