[tool.poetry]
name = "compost_tracker"
version = "0.1.0"
description = "Track shit piles"
authors = ["Bernie <reilly_bernie@mac.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
